# rusdantic

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml
docs/: index.html  llms.txt  robots.txt  sitemap.xml
review-findings/: iteration-1-core-derive.md  iteration-2-types-settings-tests.md  iteration-3-codegen-ci-examples.md  iteration-4-docs-website-crosscutting.md  iteration-5-security-edge-cases.md
rusdantic/: Cargo.toml
rusdantic-core/: Cargo.toml
rusdantic-core/src/: adapter.rs  coerce.rs  dump.rs  error.rs  lib.rs  traits.rs
rusdantic-core/src/rules/: contains.rs  email.rs  length.rs  mod.rs  pattern.rs  range.rs  required.rs  url.rs
rusdantic-derive/: Cargo.toml
rusdantic-derive/src/: diagnostics.rs  lib.rs  model.rs  parse.rs
rusdantic-derive/src/codegen/: deserialize.rs  mod.rs  schema.rs  serialize.rs  validate.rs
rusdantic-settings/: Cargo.toml
rusdantic-settings/src/: lib.rs
rusdantic-settings/src/sources/: mod.rs
rusdantic-types/: Cargo.toml
rusdantic-types/src/: lib.rs  network.rs  numeric.rs  secret.rs  string.rs
rusdantic/benches/: validate.rs
rusdantic/examples/: aliases_and_rename.rs  basic.rs  coercion.rs  custom_validator.rs  dump_options.rs  enums.rs  json_schema.rs  nested.rs  partial_validation.rs  sanitizers_and_redaction.rs  settings.rs  types_library.rs
rusdantic/src/: lib.rs
rusdantic/tests/: aliases.rs  coercion.rs  enums.rs  generics.rs  integration.rs  redact.rs  sanitizers.rs  validators.rs
