[workspace]
resolver = "2"
members = [
    "rusdantic",
    "rusdantic-core",
    "rusdantic-derive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Mitul Gehlot <mmgehlot@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmgehlot/rusdantic"
homepage = "https://github.com/mmgehlot/rusdantic"
keywords = ["validation", "serde", "derive", "pydantic", "schema"]
categories = ["development-tools::procedural-macro-helpers", "encoding"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Proc macro dependencies
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"

# Validation dependencies
regex = "1"
url = "2"
thiserror = "2"

# Dev/test dependencies
criterion = { version = "0.5", features = ["html_reports"] }
trybuild = "1"
proptest = "1"
