[package]
name = "rusdantic-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Derive macros for Rusdantic data validation framework"
readme = "../README.md"
keywords = ["validation", "derive", "macro", "serde"]
categories = ["development-tools::procedural-macro-helpers"]
include = ["src/**/*", "../LICENSE-*", "../README.md"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
regex-syntax = "0.8"
